--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm run start\" \"npm run serve\""
   },
   "dependencies": {
+    "concurrently": "^7.0.0",
     "core-js": "^3.6.5",
+    "json-server": "^0.17.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
